# devsecops

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
src/: __init__.py  calculator.py  main.py
tests/: __init__.py  test_calculator.py  test_main.py
